# scripts_from_gi

./: DecodeCSV.py  README.md  butter worth digital filter.py  driving_the_car.py
20190523_indoor_avoidance/Navigator_2D_tx2/: SimController.py  helper.py
20190523_indoor_avoidance/Navigator_2D_tx2/astar/: driver.py
20190523_indoor_avoidance/Obstacle_Map_garden/Obstacle_Map/: config.yaml
20190523_indoor_avoidance/Obstacle_Map_garden/Obstacle_Map/include/: pcl_helper.h
20190523_indoor_avoidance/Obstacle_Map_garden/Obstacle_Map/src/: dense_reconstruction.cpp  match_pointcloud_and_slam_pose2.cpp  pcl_helper.cpp
Cooleye/: README.MD
GAAS_tutorials/tutorial_2/2_automatic_landing/QRdetect/: QRdetect.py
Navigator_2D_tx2/: Navigator_2d.py  octomap_points3d.npz
Navigator_2D_tx2/RandomSampling/: astar2d.py  randomsampling.py
Navigator_2D_tx2/astar/: astar_config.py
Navigator_2D_tx2/path_optimization/: octomap_points3d.npz
Navigator_2D_tx2_0531/: Navigator_pf.py  Navigator_rs.py  Navigator_rs_test.py  helper.py  octomap_points3d.npz
Navigator_2D_tx2_0531/PotentialField/: PotentialField.py  object3D.py
Navigator_2D_tx2_0531/PotentialField/3Dconvexhull/: test.py
Navigator_2D_tx2_0531/RandomSampling/: randomsampling.py
Obstacle_Map_0528_PCL/Obstacle_Map/: config.yaml
Obstacle_Map_garden/Obstacle_Map/: .config.yaml.swp  config.yaml  config2.yaml  run2.sh
Obstacle_Map_garden/Obstacle_Map/src/: pcl_helper.cpp
RRT_star/: node.py  object3D.py  rrt_star (copy).py
bag2image/: bag_to_images.py
camera_ros/: .run.cpp.kate-swp  1.txt  2.txt  CMakeLists.txt  camera.py  camera_ros.kdev4
camera_ros/include/: run.h
camera_ros/src/: run.cpp
dockerfiles/gaas_tutorial_1/: Dockerfile  README.md  setup.sh  sources.list
dockerfiles/gaas_tutorial_1/models/: .hg_archival.txt
dockerfiles/gaas_tutorial_2/: Dockerfile
general_instructions/mavros+gazebo+px4+simulation/: 1_ubuntu_sim_ros_gazebo.sh
general_instructions/mavros+gazebo+px4+simulation/iris/: iris.sdf
general_instructions/mavros+gazebo+px4+simulation/models/fpv_cam_left/: fpv_cam_left.sdf  model.config
mavlink_api/apm/: apm_fly_square.py
navigator_temp/Navigator_2D_tx2/: Navigator_rs.py  octomap_points3d.npz
navigator_temp/Navigator_2D_tx2/PotentialField/: PotentialField.py  object3D.py
navigator_temp/Navigator_2D_tx2/RRT/: RRT.py
navigator_temp/Navigator_2D_tx2/RandomSampling/: randomsampling.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_gazebo/: DiscreteGridUtils.py  Navigator_pf.py  Navigator_rs_gazebo.py  Pos2PosController.py  SimController.py  octomap_points3d.npz  test.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_gazebo/PotentialField/: PotentialField (copy).py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_gazebo/RandomSampling/: randomsampling.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/: Navigator_rs.py  Navigator_rs_test.py  Navigator_rs_tx2.py  SimController.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/Path_Planning_cpp/: CMakeLists.txt  rrt_test.cpp
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/PotentialField/: potential_field_planning.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/RRT_star/: rrt_star.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/RandomSampling/: randomsampling.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/astar/: astar.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/astar2d/: astar2d.py
obstacle_avoidance_gazebo_and_tx2/Navigator_2D_tx2/helper/: bresenham3d.py
planning_cpp/: CMakeLists.txt  rrt_test.cpp
planning_cpp/Navigator_2D_tx2/: Navigator.py  Navigator_rrtstar.py  Navigator_rs.py  octomap_points3d.npz
planning_cpp/Navigator_2D_tx2/PotentialField/: PotentialField.py
planning_cpp/Navigator_2D_tx2/RRT_star/: rrt_star.py
planning_cpp/Navigator_2D_tx2/RandomSampling/: astar2d.py  randomsampling.py
planning_cpp/Navigator_2D_tx2/helper/: node.py
planning_cpp/Navigator_2D_tx2/path_optimization/: path_pruning.py
planning_cpp/control/include/: control.h
planning_cpp/control/src/: control.cpp
planning_cpp/geometry/include/: cuboid.h
planning_cpp/geometry/src/: bresenham.cpp  cuboid.cpp
planning_cpp/helper/: Node.h
planning_cpp/matplotlib-cpp/: matplotlibcpp.h
planning_cpp/matplotlib-cpp/contrib/: CMakeLists.txt
planning_cpp/pointcloud/include/: clustering.h  core.h  downsample.h  pcl_helper.h
planning_cpp/pointcloud/src/: clustering.cpp  downsample.cpp  pcl_helper.cpp
planning_cpp/rrt_star/include/: rrt_star.h
planning_cpp/rrt_star/src/: rrt_star.cpp  rrt_star_python_interface.cpp
scene_retrieving/: CMakeLists.txt  view.py
scene_retrieving/include/: cv_helper.h
scene_retrieving/src/: scene_retrieve.cpp  scene_retrieve.h
stereo_dense_reconstruction/stereo_dense_reconstruction/: do_reconstruction.sh
stereo_dense_reconstruction/stereo_dense_reconstruction/src/: dense_reconstruction.cpp
stereo_dense_reconstruction/stereo_dense_reconstruction_two_stereo/calibration/: mynteye_sim2.yml
stereo_dense_reconstruction/stereo_dense_reconstruction_two_stereo/cfg/: CamToRobotCalibParams.cfgc
stereo_dense_reconstruction/stereo_dense_reconstruction_two_stereo/src/: dense_reconstruction.cpp
stereo_dense_reconstruction/tx2/stereo_dense_reconstruction/: CMakeLists.txt  lena_do_reconstruction.sh  mynteye_do_reconstruction.sh
stereo_dense_reconstruction_two_pairs_stereo/: do_reconstruction.sh
stereo_dense_reconstruction_two_pairs_stereo/calibration/: mynteye_sim2.yml
stereo_dense_reconstruction_two_pairs_stereo/cfg/: CamToRobotCalibParams.cfgc
stereo_dense_reconstruction_two_pairs_stereo/src/: dense_reconstruction.cpp
testing/1129TODO_wrong/: px4_mavros_to_GPS.py  tasks
tx2_error_detection_app/: CMakeLists.txt  README.txt  tx2_error_detection_app.c
(+77 files in other folders)
